Thu Mar 14 09:17:55 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Strategies_T.cpp (activate_svc_handler): Added a call to
	  destroy() the svc_handler if ACE::fork() fails.  Thanks to
 	  Rainer Lucas <rainer.lucas@fun.de> for reporting this.

	* ace/Configuration.cpp (remove_section): Made the code consistent
	  for all versions of Windows.  Thanks to Jon Lambert
 	  <jlsysinc@ix.netcom.com> for the fix.

	* examples/Service_Configurator/IPC-tests/client/remote_service_directory_test.cpp (ACE_TMAIN): Added
	  '\n' to the end of command strings so that the client won't hang.  Thanks to 
	  Marc M Adkins <Marc.M.Adkins@doorways.org> for this fix.

Wed Mar 13 15:55:54 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/OS.h: EACCESS was misspelled!  Thanks to Eric Eide
 	  <eeide@cs.utah.edu> for reporting this.

Wed Mar 13 20:50:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS.i:
          Minor change to resolve signed/unsigned comparison warning.

        * ace/OS_String.h:
        * ace/OS_String.inl:
        * ace/OS_String.cpp:
          Added wide-char version of strtok_r and strtok_r_emulation.

        * ace/Functor.h:
        * ace/Functor.i:
          Added hash related templates for ACE_ANTI_TCHAR type
          when ACE_USES_WCHAR is defined.

        * ace/ace_dll.vcp:
        * ace/ace_os_dll.vcp: Added missing files.

Wed Mar 13 11:57:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/Configuration_Import_Export.cpp: Replace ACE_ASSERTs with
          validity checks that set errno and return -1. ACE_ASSERT is
          a little too drastic for a simple error, and the ACE_ASSERT
          check is removed altogether when building with ACE_NDEBUG.

Wed Mar 13 10:36:02 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/config-freebsd-pthread.h: Fix test for POSIX RT signals.
	  Thanks to Denis Otchenashko <oko@bank.gov.ua> for reporting
	  these problems.
