@@ -1477,10 +1477,11 @@ Oleg Kraynov <olegvkr@yahoo.com>
 Stephan Gudmundson <stephang@netacquire.com>
 Frank Kuhlman <kuhlmann@materna.de>
 Sorin Iordachescu <sorin.iordachescu@am-beo.com>
-Denis Otchenashko <oko@bank.gov.ua> 
-Marc M Adkins <Marc.M.Adkins@doorways.org> 
+Denis Otchenashko <oko@bank.gov.ua>
+Marc M Adkins <Marc.M.Adkins@doorways.org>
 Jon Lambert <jlsysinc@ix.netcom.com>
 Rainer Lucas <rainer.lucas@fun.de>
+Allan S Iverson <allaniverson@sprynet.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
